syntax = "proto3"; 

message Cashflow {
    double interest_amount = 1;
    double principal_amount = 2;
    int64 date = 3;
}

message Account{
string key_1 = 1;
string br_no = 2;
string act_type = 3;
string purpose_code_a = 4;
double applic_amount = 5;
int32 repay_count = 6;
int32 repay_day = 7;
int32 repay_freq = 8;
double app_amt = 9;
double loan_bal = 10;
double adv_bal = 11;
double theo_loan_bal = 12;
double loan_repay = 13;
double pend_dues = 14;
int64 apprv_date = 15;
int64 lst_fin_date = 16;
int64 lst_arr_date = 17;
int64 pend_dues_date = 18;
double int_rate = 19;
string cat = 20;
double loan_trm = 21;
string bad_debt_ind = 22;
double arr_int_accr = 23;
double arr_int_incr = 24;
double rt_incr = 25;
string customer_no = 26;
string currency_ind = 27;
double store_rate = 28;
string cr_rating = 29;
string gl_class_code = 30;
double theo_unpd_arrs_int = 31;
double security_amount = 32;
int64 last_credit_dt = 33;
string old_bad_debt_ind = 34;
int64 npa_date = 35;
double collection_amt = 36;
double provision_amount = 37;
int64 last_repriced_date = 38;
int64 next_repriced_date = 39;
string repricing_frequency = 40;
string inca = 41;
string rating_source = 42;
string rating_code = 43;
string benchmark = 44;
string name = 45;
string cust_acct_no = 46;
string prim_acct = 47;
string segment_code = 48;
string industry_code = 49;
string grup_code = 50;
string bus_sector_code = 51;
string tier_cust_type = 52;
double a1 = 53;
double a2 = 54;
double a3 = 55;
string a4 = 56;
string a5 = 57;
string a6 = 58;
string a7 = 59;
string a8 = 60;
string a9 = 61;
string a10 = 62;
int64 asondate = 63;
int64 mat_dt = 64;
int64 next_rep_date= 65;
repeated Cashflow cashflows = 66;
}
